--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -118,6 +118,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Entities">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BulkManager.cs" />
