--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.SQL/Vanrise.Fzero.FraudAnalysis.Data.SQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.SQL/Vanrise.Fzero.FraudAnalysis.Data.SQL.csproj
@@ -41,6 +41,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Data">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Data.dll</HintPath>
     </Reference>
