--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OperationResults\InsertOperationOutput.cs" />
+    <Compile Include="OperationResults\UpdateOperationOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
   </ItemGroup>
