--- a/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
+++ b/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
@@ -114,6 +114,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Security\Services\APIServices\RoleAPIService.js" />
+    <Content Include="Security\Views\RoleEditor.html" />
+    <Content Include="Security\Views\RoleEditorController.js" />
     <Content Include="Security\Views\RoleManagement.html" />
     <Content Include="Security\Views\RoleManagementController.js" />
   </ItemGroup>
