--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -47,6 +47,10 @@
     <Compile Include="RoleManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
+      <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
+      <Name>Vanrise.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Security.Data\Vanrise.Security.Data.csproj">
       <Project>{354e87d0-0442-4e11-8ba4-3d42f00b5853}</Project>
       <Name>Vanrise.Security.Data</Name>
