--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Billing\BillingStatistic.cs" />
+    <Compile Include="Billing\CarrierProfile.cs" />
     <Compile Include="Billing\MonthTraffic.cs" />
     <Compile Include="Billing\ZoneProfit.cs" />
     <Compile Include="BigResult.cs" />
