Added Report Definition
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23348

--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -284,6 +284,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Tasks\ABaghdadiTask.cs" />
+    <Compile Include="Tasks\AliBalloukTask.cs" />
     <Compile Include="Tasks\HaSSanTask.cs" />
     <Compile Include="Tasks\HusseinTask.cs" />
     <Compile Include="Tasks\IsmailTask.cs" />
