--- a/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BillingReports\ZoneProfitReportGenerator.cs" />
     <Compile Include="BillingStatisticManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AnalyticsManager.cs" />
@@ -64,6 +65,10 @@
     <ProjectReference Include="..\TOne.BusinessEntity.Entities\TOne.BusinessEntity.Entities.csproj">
       <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
       <Name>TOne.BusinessEntity.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Entities\TOne.Entities.csproj">
+      <Project>{60da66bd-017d-43a2-82dc-ed7db8751d23}</Project>
+      <Name>TOne.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
