--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -112,6 +112,10 @@
     <Compile Include="GenericEntityStatus.cs" />
     <Compile Include="OperationResults\InsertOperationOutput.cs" />
     <Compile Include="OperationResults\UpdateOperationOutput.cs" />
+    <Compile Include="Report\IReportGenerator.cs" />
+    <Compile Include="Report\ReportParameters.cs" />
+    <Compile Include="Report\ReportParameterSettings.cs" />
+    <Compile Include="Report\ReportDefinition.cs" />
     <Compile Include="Security\SecureActionAttribute.cs" />
     <Compile Include="Security\AuthenticationOutput.cs" />
     <Compile Include="CodeList.cs" />
