renamed report definition class name
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23349

--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -115,7 +115,7 @@
     <Compile Include="Report\IReportGenerator.cs" />
     <Compile Include="Report\ReportParameters.cs" />
     <Compile Include="Report\ReportParameterSettings.cs" />
-    <Compile Include="Report\ReportDefinition.cs" />
+    <Compile Include="Report\RDLCReportDefinition.cs" />
     <Compile Include="Security\SecureActionAttribute.cs" />
     <Compile Include="Security\AuthenticationOutput.cs" />
     <Compile Include="CodeList.cs" />
