--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleManager.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
