--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleDataManager.cs" />
+    <Compile Include="UserDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Data.SQL\Vanrise.Data.SQL.csproj">
