--- a/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRoleDataManager.cs" />
+    <Compile Include="IUserDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityDataManagerFactory.cs" />
   </ItemGroup>
