--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomPasswordHelper.cs" />
     <Compile Include="Role.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
