Billing Reports Ui implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23360

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
@@ -125,6 +125,8 @@
     <Content Include="Analytics\Constants\TrafficStatisticsMeasureEnum.js" />
     <Content Include="Analytics\Services\APIServices\AnalyticsAPIService.js" />
     <Content Include="Analytics\Services\APIServices\BillingStatisticsAPIService.js" />
+    <Content Include="Analytics\Views\Billing Reports\BillingReports.html" />
+    <Content Include="Analytics\Views\Billing Reports\BillingReportsController.js" />
     <Content Include="Analytics\Views\Billing Statistics\VariationReports.html" />
     <Content Include="Analytics\Views\Billing Statistics\VariationReportsController.js" />
     <Content Include="Analytics\Views\CDR\CDRReport.html" />
