--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -130,6 +130,7 @@
     <Compile Include="ProtCodeMap.cs" />
     <Compile Include="ProtPricingGenerator.cs" />
     <Compile Include="RandomPasswordHelper.cs" />
+    <Compile Include="ReportDefinitionManager.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="SecurityManager.cs" />
     <Compile Include="SharedQueueManager.cs" />
