adding carrierAccount Prototype
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23394

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -127,6 +127,10 @@
   <ItemGroup>
     <Content Include="Client\Services\APIServices\BusinessEntityAPIService.js" />
     <Content Include="Client\Services\APIServices\SwitchManagmentAPIService.js" />
+    <Content Include="Client\Views\CarrierAccountEditor.html" />
+    <Content Include="Client\Views\CarrierAccountEditorController.js" />
+    <Content Include="Client\Views\CarrierAccountManagement.html" />
+    <Content Include="Client\Views\CarrierAccountManagementController.js" />
     <Content Include="Client\Views\SwitchEditor.html" />
     <Content Include="Client\Views\SwitchEditorController.js" />
     <Content Include="Client\Views\SwitchManagment.html" />
