--- a/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BillingReports\ZoneProfitReportGenerator.cs" />
     <Compile Include="BillingStatisticManager.cs" />
+    <Compile Include="CDRManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AnalyticsManager.cs" />
     <Compile Include="TrafficStatisticManager.cs" />
