--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data.SQL/TOne.Analytics.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data.SQL/TOne.Analytics.Data.SQL.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingStatisticDataManager.cs" />
+    <Compile Include="CDRDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AnalyticsDataManager.cs" />
     <Compile Include="TrafficStatisticDataManager.cs" />
