--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="AnalyticsDataManagerFactory.cs" />
     <Compile Include="IBillingStatisticDataManager.cs" />
+    <Compile Include="ICDRDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IAnalyticsDataManager.cs" />
     <Compile Include="ITrafficStatisticDataManager.cs" />
