ZoneProfit Billing Report rdlc parameters handling
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23410

--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -113,6 +113,7 @@
     <Compile Include="OperationResults\InsertOperationOutput.cs" />
     <Compile Include="OperationResults\UpdateOperationOutput.cs" />
     <Compile Include="Report\IReportGenerator.cs" />
+    <Compile Include="Report\RdlcParameter.cs" />
     <Compile Include="Report\ReportParameters.cs" />
     <Compile Include="Report\ReportParameterSettings.cs" />
     <Compile Include="Report\RDLCReportDefinition.cs" />
