--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Billing\CarrierProfile.cs" />
     <Compile Include="Billing\MonthTraffic.cs" />
     <Compile Include="Billing\VariationReports.cs" />
+    <Compile Include="Billing\VariationReportsData.cs" />
     <Compile Include="Billing\ZoneProfit.cs" />
     <Compile Include="BigResult.cs" />
     <Compile Include="Billing\ZoneProfitFormatted.cs" />
