Add Generate Statistics WF
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23428

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BillingCDRsProcessInput.cs" />
     <Compile Include="CDRGenerationProcessInput.cs" />
     <Compile Include="DailyRepricingProcessInput.cs" />
+    <Compile Include="GenerateStatisticsProcessInput.cs" />
     <Compile Include="ImportCDRProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawCDRsProcessInput.cs" />
