--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MenuManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="UserManager.cs" />
