--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModuleDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleDataManager.cs" />
     <Compile Include="UserDataManager.cs" />
+    <Compile Include="ViewDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Data.SQL\Vanrise.Data.SQL.csproj">
