--- a/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IModuleDataManager.cs" />
     <Compile Include="IRoleDataManager.cs" />
     <Compile Include="IUserDataManager.cs" />
+    <Compile Include="IViewDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityDataManagerFactory.cs" />
   </ItemGroup>
