--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -34,12 +34,12 @@
   </vanriseLogging>
   <connectionStrings>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=sa;Password=QC@cce$$"/>
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=sa;Password=QC@cce$$"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
+    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
-    <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB2;Data Source=."/>
+    <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneDevTest01_routing_{0};Data Source=."/>-->
@@ -53,8 +53,8 @@
     <session-factory>
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
-      <property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$</property>
-      <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123</property>-->
+      <!--<property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$</property>-->
+      <property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123</property>
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TONE-ProtelMarch2012;User ID=sa;Password=vanrise@cce$$</property>-->
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=sa;Password=vanrise@cce$$</property>-->
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
@@ -169,8 +169,8 @@
   <appSettings>
     <add key="TABS License" value="BF-2F-B4-CD-36-CB-1D-4B-8F-55-1C-F4-99-CD-1B-E8::==QMwkDM5EDMyYjM4ADNxAjM:kVGdwlncj5WR09mT"/>
     <add key="LoggerPath" value="/TOne_RePricingService/Logger"/>
-    <!--<add key="hibernate.connection.connection_string" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
-    <add key="hibernate.connection.connection_string" value="Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$"></add>
+    <add key="hibernate.connection.connection_string" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
+    <!--<add key="hibernate.connection.connection_string" value="Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$"></add>-->
     <!--<add key="SecondaryConnetionString" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
     <!--<add key="RepricingFrom" value="2014-07-07"/>
     <add key="RepricingTo" value="2014-07-07"/>-->
