Traffic Stat Generator
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23453

--- a/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
@@ -74,6 +74,7 @@
     <Compile Include="PricingGenerator.cs" />
     <Compile Include="PricingGeneratorEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrafficStatisticGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.BusinessEntity.Business\TOne.BusinessEntity.Business.csproj">
