--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -116,9 +116,7 @@
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Client\Libraries\AngularExtensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -214,6 +212,14 @@
     <Content Include="Client\Javascripts\Services\NotificationService\vr-notification-service.js" />
     <Content Include="Client\Javascripts\Services\utils-service.js" />
     <Content Include="Client\Javascripts\Services\zone-service.js" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\angular.treeview.js" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\css\angular.treeview.css" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\img\file.png" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\img\folder-closed.png" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\img\folder.png" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\img\jsfiddle01.png" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\img\jsfiddle02.png" />
+    <Content Include="Client\Libraries\AngularExtensions\treeview\img\preview.png" />
     <Content Include="Client\Libraries\Angular\angular-animate.js" />
     <Content Include="Client\Libraries\Angular\angular-messages.js" />
     <Content Include="Client\Libraries\Angular\angular-notify.js" />
