add GetVariationReportsFinalData function
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23461

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Billing\BillingStatistic.cs" />
     <Compile Include="Billing\CarrierProfile.cs" />
     <Compile Include="Billing\MonthTraffic.cs" />
+    <Compile Include="Billing\TotalDurationPerDate.cs" />
     <Compile Include="Billing\VariationReports.cs" />
     <Compile Include="Billing\VariationReportsData.cs" />
     <Compile Include="Billing\ZoneProfit.cs" />
