VoIP Service switch
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23462

--- a/CLITester/AndroidApplicationService/App.config
+++ b/CLITester/AndroidApplicationService/App.config
@@ -2,8 +2,7 @@
 <configuration>
   <system.web>
     <httpHandlers>
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
-        validate="false" />
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
     </httpHandlers>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -15,26 +14,35 @@
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
       </buildProviders>
     </compilation>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
   </system.web>
   <appSettings>
     <add key="ExpiryTime" value="60" />
     <add key="LineAvailable" value="20" />
     <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
     <add key="SmtpServer" value="smtp.gmail.com" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-    </startup>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="clireporterSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://idsdemo.me/CLIReporter/clireporter.asmx"
-                binding="basicHttpBinding" bindingConfiguration="clireporterSoap"
-                contract="AndroidLiveService.clireporterSoap" name="clireporterSoap" />
-        </client>
-    </system.serviceModel>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="clireporterSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://idsdemo.me/CLIReporter/clireporter.asmx" binding="basicHttpBinding" bindingConfiguration="clireporterSoap" contract="AndroidLiveService.clireporterSoap" name="clireporterSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
