--- a/CLITester/VoIPSwitchService1/App.config
+++ b/CLITester/VoIPSwitchService1/App.config
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
   <appSettings>
     <add key="ExpiryTime" value="60" />
-    <add key="LineAvailable" value="20" />
-    <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
-    <add key="SmtpServer" value="smtp.gmail.com" />
   </appSettings>
+  <connectionStrings>
+    <add name="MySQL" connectionString="SERVER=192.168.22.23; DATABASE=voipswitch; UID=hadi; PASSWORD=h@d!" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
