--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BigResult.cs" />
     <Compile Include="Billing\ZoneProfitFormatted.cs" />
     <Compile Include="CDR.cs" />
+    <Compile Include="CDRFilter.cs" />
     <Compile Include="KeyColumn.cs" />
     <Compile Include="Mobile\AlertView.cs" />
     <Compile Include="Mobile\CarrierRateView.cs" />
