--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -52,8 +52,9 @@
     <Compile Include="Billing\ZoneProfit.cs" />
     <Compile Include="BigResult.cs" />
     <Compile Include="Billing\ZoneProfitFormatted.cs" />
-    <Compile Include="CDR.cs" />
+    <Compile Include="BillingCDR.cs" />
     <Compile Include="CDRFilter.cs" />
+    <Compile Include="CDRBigResult.cs" />
     <Compile Include="KeyColumn.cs" />
     <Compile Include="Mobile\AlertView.cs" />
     <Compile Include="Mobile\CarrierRateView.cs" />
