git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23483

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AggregateDefinition.cs" />
     <Compile Include="AverageAggregate.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="Condition.cs" />
     <Compile Include="ConsecutiveAggregate.cs" />
     <Compile Include="CallClass.cs" />
