--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CriteriaManager.cs" />
     <Compile Include="FraudManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PredefinedManager.cs" />
     <Compile Include="StrategyManager.cs" />
   </ItemGroup>
   <ItemGroup>
