adding rates page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23490

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BusinessEntityController.cs" />
+    <Compile Include="Controllers\RateController.cs" />
     <Compile Include="Controllers\SwitchController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -131,6 +132,8 @@
     <Content Include="Client\Views\CarrierAccountEditorController.js" />
     <Content Include="Client\Views\CarrierAccountManagement.html" />
     <Content Include="Client\Views\CarrierAccountManagementController.js" />
+    <Content Include="Client\Views\Rates.html" />
+    <Content Include="Client\Views\RatesController.js" />
     <Content Include="Client\Views\SwitchEditor.html" />
     <Content Include="Client\Views\SwitchEditorController.js" />
     <Content Include="Client\Views\SwitchManagment.html" />
