Modifying query to get the needed columns and changing in enum.
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23506

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
@@ -123,6 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Analytics\Constants\BillingCDRMeasureEnum.js" />
+    <Content Include="Analytics\Constants\BillingCDROptionMeasureEnum.js" />
     <Content Include="Analytics\Constants\TimePeriodEnum.js" />
     <Content Include="Analytics\Constants\TrafficStatisticGroupKeysEnum.js" />
     <Content Include="Analytics\Constants\TrafficStatisticsMeasureEnum.js" />
