Security Module - Implementing the Permission assingment functionality (It might need stabalization after this check in)
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23511

--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessEntityManager.cs" />
+    <Compile Include="BusinessEntityModuleDataManager.cs" />
     <Compile Include="ModuleDataManager.cs" />
+    <Compile Include="PermissionDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleDataManager.cs" />
     <Compile Include="UserDataManager.cs" />
