--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessEntity.cs" />
+    <Compile Include="BusinessEntityNode.cs" />
+    <Compile Include="BusinessEntityModule.cs" />
     <Compile Include="MenuItem.cs" />
     <Compile Include="Module.cs" />
+    <Compile Include="Permission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomPasswordHelper.cs" />
     <Compile Include="Role.cs" />
