Differential Route Build
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23528

--- a/TOneV2/Code/TOneV2/TOne.LCR.Entities/TOne.LCR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Entities/TOne.LCR.Entities.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Routing\DifferentialRouteState.cs" />
     <Compile Include="Routing\RouteDetailFilter.cs" />
     <Compile Include="Routing\RouteInfo.cs" />
-    <Compile Include="SingleSaleCodeMatch.cs" />
+    <Compile Include="ZoneMatchWithCodeGroup.cs" />
     <Compile Include="SupplierZones.cs" />
     <Compile Include="ZoneRates\CustomerRates.cs" />
     <Compile Include="ZoneRates\SupplierZoneRates.cs" />
