--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -187,7 +187,7 @@
     <add key="RepricingParallelThreads" value="5"/>
     <add key="RoutingCodePrefixLength" value="2"/>
     <add key="BCPDonotDeleteFiles" value="true"/>
-    
+    <add key="RebuildZoneRates" value="false"/>
   </appSettings>
   <system.codedom>
     <compilers>
