Zone Summary Detailed Report
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23563

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingReports\ZoneProfitReportGenerator.cs" />
+    <Compile Include="BillingReports\ZoneSummaryDetailedReportGenerator.cs" />
     <Compile Include="BillingReports\ZoneSummaryReportGenerator.cs" />
     <Compile Include="BillingStatisticManager.cs" />
     <Compile Include="CDRManager.cs" />
