--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -367,6 +367,9 @@
     <EmbeddedResource Include="Reports\Analytics\rdlZoneSummary.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Analytics\rdlZoneSummaryDetailed.rdlc">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\Analytics\ZoneProfit.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
