Carrier Lost Summary Report
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23578

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BillingReports\ZoneProfitReportGenerator.cs" />
     <Compile Include="BillingReports\ZoneSummaryDetailedReportGenerator.cs" />
+    <Compile Include="BillingReports\CarrierLostReportGenerator.cs" />
     <Compile Include="BillingReports\ZoneSummaryReportGenerator.cs" />
     <Compile Include="BillingStatisticManager.cs" />
     <Compile Include="CDRManager.cs" />
