--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Billing\BillingStatistic.cs" />
+    <Compile Include="Billing\CarrierLost.cs" />
+    <Compile Include="Billing\CarrierLostFormatted.cs" />
     <Compile Include="Billing\CarrierProfile.cs" />
     <Compile Include="Billing\MonthTraffic.cs" />
     <Compile Include="Billing\TotalDurationPerDate.cs" />
